fix: jd/css/jd_form.css: wrong position of button of getting verification code

--- a/jd/css/jd_form.css
+++ b/jd/css/jd_form.css
@@ -13,7 +13,7 @@ li {
 	height: 46px;
 	margin: 0 0 30px;
 	padding: 2px;
-	width: 400px;
+	width: 420px;
 }
 
 ul {
